--- a/index.html
+++ b/index.html
@@ -39,11 +39,41 @@
     <main>
         <section class="hero">
             <div class="container hero__container">
-
                 <h2 class="hero__title">Find the best <span>talent</span></h2>
                 <p class="hero__text">Finding the right people and building high performing teams can be hard. Most
                     companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
-
+            </div>
+        </section>
+        <section class="build">
+            <div class="container build__container">
+                <h2 class="build__left-title">Build & manage distributed teams like no one else.</h2>
+                <div class="build__right-box">
+                    <div class="build__mini-box">
+                        <img class="build__images" src="./images/experienced__guy.svg" alt="experienced__guy" width="72"
+                            height="72">
+                        <div class="build__mini-titles-box">
+                            <h6 class="build__mini-titles">Experienced Individuals</h6>
+                            <p class="build__texts">Our network is made up of highly experienced professionals who are
+                                passionate about what they do.</p>
+                        </div>
+                    </div>
+                    <div class="build__mini-box">
+                        <img class="build__images" src="./images/settings.svg" alt="settings" width="72" height="72">
+                        <div class="build__mini-titles-box">
+                            <h6 class="build__mini-titles">Easy to Implement</h6>
+                            <p class="build__texts">Our processes have been refined over years of implementation meaning
+                                our teams always deliver.</p>
+                        </div>
+                    </div>
+                    <div class="build__mini-box">
+                        <img class="build__images" src="./images/balance.svg" alt="balance" width="72" height="72">
+                        <div class="build__mini-titles-box">
+                            <h6 class="build__mini-titles">Enhanced Productivity</h6>
+                            <p class="build__texts">Our customized platform with in-built analytics helps you manage
+                                your distributed teams.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
