--- a/index.html
+++ b/index.html
@@ -76,6 +76,39 @@
                 </div>
             </div>
         </section>
+        <section class="delivery">
+            <div class="container delivery__container">
+                <h4 class="delivery__title">Delivering real results for top companies. Some of our <span>success
+                        stories.</span></h4>
+                <div class="delivery__bottom-box">
+                    <div class="delivery__mini-boxes">
+                        <blockquote class="delivery__comments">The team perfectly fit the specialized skill set
+                            required. They focused on the most essential features helping us launch the platform eight
+                            months faster than planned.</blockquote>
+                        <h6 class="delivery__mini-titles">Kady Baker</h6>
+                        <p class="delivery__mini-text">Product Manager at Bookmark</p>
+                        <img class="delivery__images" src="./images/girl.png" alt="girl" width="62" height="62">
+                    </div>
+                    <div class="delivery__mini-boxes">
+                        <blockquote class="delivery__comments">We needed to automate our entire onboarding process. The
+                            team came in and built out the whole journey. Since going live, user retention has gone
+                            through the roof!</blockquote>
+                        <h6 class="delivery__mini-titles">Aiysha Reese</h6>
+                        <p class="delivery__mini-text">Founder of Manage</p>
+                        <img class="delivery__images" src="./images/second__girl.png" alt="second__girl" width="62"
+                            height="62">
+                    </div>
+                    <div class="delivery__mini-boxes">
+                        <blockquote class="delivery__comments">Amazing. Our team helped us build an app that delivered a
+                            new experience for hiring a physio. The launch was an instant success with 100k downloads in
+                            the first month.</blockquote>
+                        <h6 class="delivery__mini-titles">Arthur Clarke</h6>
+                        <p class="delivery__mini-text">Co-founder of MyPhysio</p>
+                        <img class="delivery__images" src="./images/old__man.png" alt="old__man" width="62" height="62">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container footer__container">
