--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
                 </div>
             </div>
         </section>
+        <section class="ready">
+            <div class="container ready__container">
+                <h3 class="ready__title">Ready to get started?</h3>
+                <a class="ready__link link2" href="#">contact us</a>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container footer__container">
